# MF_ETL

./: .env.example  README.md  demo.py  fix_demo.py  flowchart TD.mmd  postman_collection.json  pyproject.toml  requirements.txt  restructure.sh  setup.py  test_phase1_fixes.py
config/: config.yaml
demos/: end_to_end_demo.py
docs/: API.md  FUND_RESOLUTION_FLOW.md
etl_service/: main.py
etl_service/enrichment/: fund_enricher.py
services/api/: main.py
services/api/models/: request_models.py  response_models.py
services/enrichment/: fund_enricher.py  holding_validator.py
src/: __init__.py
src/fetchers/: __init__.py  jugaad_fetcher.py  mftool_fetcher.py  mstarpy_fetcher.py  yahooquery_fetcher.py
src/mf_etl/fetchers/: __init__.py
src/mf_etl/services/: fund_resolver.py
src/mf_etl/utils/: __init__.py  config_loader.py  logger.py  search_utils.py
src/mf_etl/validators/: __init__.py  holdings_validator.py  index_validator.py  nav_validator.py  sector_validator.py
src/utils/: fund_resolver.py  logger.py
tests/: __init__.py
tests/unit/: test_holding_validator.py  test_search_utils.py
