[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mf-etl"
version = "0.1.0"
description = "Mutual Fund ETL and Enrichment Service"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["mutual-fund", "etl", "enrichment", "mstarpy", "mftool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "mstarpy>=0.5.0",
    "mftool>=0.1.26",
    "jugaad-data>=0.25",
    "pandas>=1.3.0",
    "pyyaml>=5.4",
    "python-dotenv>=0.19.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "pydantic>=1.9.0",
]

dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "isort>=5.10",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/shiv159/MF_ETL"
Documentation = "https://github.com/shiv159/MF_ETL/tree/master/docs"
Repository = "https://github.com/shiv159/MF_ETL.git"
"Bug Tracker" = "https://github.com/shiv159/MF_ETL/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src/mf_etl"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
]
